--- a/templates/trends.html
+++ b/templates/trends.html
@@ -46,7 +46,7 @@
           <div class="title-section">
             <h1 class="main-title animate-slide-up">TRENDS & PREDICTIONS</h1>
             <p class="subtitle animate-slide-up" style="animation-delay: 0.2s">
-              New CSV received {{ time_ago }} ({{ latest_date }})
+              New data received {{ time_ago }} ({{ latest_date }})
             </p>
           </div>
           <div class="header-buttons">
