feat: add link to git

--- a/templates/index.html
+++ b/templates/index.html
@@ -145,6 +145,19 @@
         /></span>
         <span class="fa-label">Join us on Discord!</span>
       </a>
+      <!-- Git -->
+      <a
+        class="sidebar-toggle-floating discord-toggle-floating"
+        href="https://github.com/Ednyan/ibu-dashboard"
+        target="_blank"
+        rel="noopener"
+        aria-label="git"
+      >
+        <span class="fa-icon"
+          ><img src="{{ url_for('static', filename='git-icon.svg') }}" alt=""
+        /></span>
+        <span class="fa-label">View the source code!</span>
+      </a>
       <!-- Stats restore (visible when minimized) -->
       <button
         class="sidebar-toggle-floating stats-toggle-floating hidden"
