--- a/templates/graphs-modern.html
+++ b/templates/graphs-modern.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>I.B.U TEAM DATA</title>
+    <title>I.B.U. TEAM DATA</title>
 
     <!-- jQuery and jQuery UI for custom datepicker -->
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
