--- a/templates/member-info.html
+++ b/templates/member-info.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>I.B.U MEMBER INFO</title>
+  <title>I.B.U. MEMBER INFO</title>
   
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
   <link rel="icon" type="image/svg+xml" href="{{ url_for('static', filename='ibu-icon.svg') }}">
