--- a/templates/index.html
+++ b/templates/index.html
@@ -2,10 +2,10 @@
 block content %}
 
 <div
-  class="fixed left-1/2 top-1/2 z-30 -translate-x-1/2 -translate-y-1/2 flex flex-col items-center gap-10 pointer-events-none"
+  class="fixed left-1/2 top-1/2 z-30 -translate-x-1/2 -translate-y-1/2 flex flex-col items-center gap-5 pointer-events-none"
 >
   <!-- Images -->
-  <div class="flex flex-col items-center gap-6 m">
+  <div class="flex flex-col items-center gap-6">
     <img
       src="{{ url_for('static', filename='ibu-icon.svg') }}"
       class="w-[340px] max-w-[80vw]"
@@ -19,26 +19,35 @@ block content %}
   </div>
 
   <!-- Buttons -->
-  <div class="hidden md:flex gap-6 pointer-events-auto mb-15">
+  <div class="hidden md:flex gap-3 pointer-events-auto mb-15">
     <a
       href="{{ url_for('visualization') }}"
-      class="px-10 py-4 rounded-4xl text-3xl text-white whitespace-nowrap font-semibold bg-linear-to-br from-[#e06150] to-[#ff7a6b] shadow-lg shadow-orange-500/20 transition hover:scale-[1.03] active:scale-[0.97] inline-block"
+      class="px-12 py-6 rounded-3xl text-4xl text-white whitespace-nowrap font-semibold bg-linear-to-br from-[#e06150] to-[#ff7a6b] shadow-lg shadow-orange-500/20 transition hover:scale-[1.03] active:scale-[0.97] inline-flex flex-col"
     >
-      Team Overview
+      <span class="text-4xl font-semibold"> Team Overview </span>
+      <span class="text-sm text-white/80 mt-1">
+        See overall team performace overtime
+      </span>
     </a>
 
     <a
       href="{{ url_for('trends') }}"
-      class="px-10 py-4 rounded-4xl text-3xl text-white whitespace-nowrap font-semibold bg-linear-to-br from-[#66afea] to-[#4b5ba2] shadow-lg shadow-orange-500/20 transition hover:scale-[1.03] active:scale-[0.97] inline-block"
+      class="px-12 py-6 rounded-3xl text-4xl text-white whitespace-nowrap font-semibold bg-linear-to-br from-[#66afea] to-[#4b5ba2] shadow-lg shadow-orange-500/20 transition hover:scale-[1.03] active:scale-[0.97] inline-flex flex-col"
     >
-      Trends
+      <span class="text-4xl font-semibold"> Trends </span>
+      <span class="text-sm text-white/80 mt-1">
+        See team(s) & user(s) performace overtime
+      </span>
     </a>
 
     <a
       href="{{ url_for('member_info') }}"
-      class="px-10 py-4 rounded-4xl text-3xl text-white whitespace-nowrap font-semibold bg-linear-to-br from-[#667eea] to-[#764ba2] shadow-lg shadow-orange-500/20 transition hover:scale-[1.03] active:scale-[0.97] inline-block"
+      class="px-12 py-6 rounded-3xl text-4xl text-white whitespace-nowrap font-semibold bg-linear-to-br from-[#667eea] to-[#764ba2] shadow-lg shadow-orange-500/20 transition hover:scale-[1.03] active:scale-[0.97] inline-flex flex-col"
     >
-      Member Tracking
+      <span class="text-4xl font-semibold"> Member Tracking </span>
+      <span class="text-sm text-white/80 mt-1">
+        See members contribution to the team
+      </span>
     </a>
   </div>
 </div>
