fix(ui/header): switch discord icon alt from git to discord

--- a/templates/header.html
+++ b/templates/header.html
@@ -41,7 +41,7 @@
       >
         <img
           src="{{ url_for('static', filename='discord-icon.svg') }}"
-          alt="Git"
+          alt="Discord"
           class="h-6 w-6"
         />
       </a>
