--- a/templates/header.html
+++ b/templates/header.html
@@ -45,28 +45,31 @@
           class="h-6 w-6"
         />
       </a>
+      <div class="flex">{{ extra_nav_buttons_desktop }}</div>
     </nav>
-
-    <button
-      id="menu-toggle"
-      class="sm:hidden inline-flex items-center justify-center rounded-lg p-2 text-white/80 hover:bg-white/10 focus:outline-none"
-      aria-label="Open menu"
-    >
-      <!-- Hamburger icon -->
-      <svg
-        class="h-6 w-6"
-        fill="none"
-        stroke="currentColor"
-        stroke-width="2"
-        viewBox="0 0 24 24"
+    <nav class="sm:hidden inline-flex items-center justify-center gap-2">
+      <div class="flex">{{ extra_nav_buttons_mobile }}</div>
+      <button
+        id="menu-toggle"
+        class="rounded-lg p-2 text-white/80 hover:bg-white/10 focus:outline-none"
+        aria-label="Open menu"
       >
-        <path
-          stroke-linecap="round"
-          stroke-linejoin="round"
-          d="M4 6h16M4 12h16M4 18h16"
-        />
-      </svg>
-    </button>
+        <!-- Hamburger icon -->
+        <svg
+          class="h-6 w-6"
+          fill="none"
+          stroke="currentColor"
+          stroke-width="2"
+          viewBox="0 0 24 24"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M4 6h16M4 12h16M4 18h16"
+          />
+        </svg>
+      </button>
+    </nav>
   </div>
   <nav
     id="mobile-menu"
@@ -98,6 +101,7 @@
           alt="Discord"
           class="h-6 w-6"
       /></a>
+      <div class="flex">{{ extra_nav_buttons_mobile_hamburger }}</div>
     </div>
   </nav>
 </header>
