--- a/templates/header.html
+++ b/templates/header.html
@@ -86,7 +86,7 @@
   </div>
   <nav
     id="mobile-menu"
-    class="sm:hidden absolute left-0 right-0 top-full z-40 max-h-0 overflow-hidden border-t border-white/10 bg-black/70 backdrop-blur-2xl transition-[max-height,opacity] duration-300 ease-out opacity-0 rounded-2xl mr-3 mt-3 ml-3"
+    class="sm:hidden absolute left-0 right-0 top-full z-100 mr-2 mt-3 ml-2 rounded-xl border border-white/40 bg-black max-h-0 overflow-hidden opacity-0 transition-[max-height,opacity] duration-300 ease-out"
   >
     <div class="flex flex-col gap-1 px-4 py-4">
       <a
