feat(ui): rename page titles

--- a/templates/team-info.html
+++ b/templates/team-info.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %} {% block title %}I.B.U. TEAM DATA{% endblock %} {%
+{% extends "base.html" %} {% block title %}I.B.U. Team Info{% endblock %} {%
 block head %} {{ super() }}
 <!-- jQuery and jQuery UI for custom datepicker -->
 <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
