--- a/templates/members.html
+++ b/templates/members.html
@@ -1,5 +1,5 @@
-{% extends "base.html" %} {% block title %}I.B.U. MEMBER INFO{% endblock %} {%
-block content %}
+{% extends "base.html" %} {% block title %}I.B.U. Members{% endblock %} {% block
+content %}
 
 <div class="mx-auto w-full max-w-6xl px-4 py-6">
   <!-- Header -->
