feat(ui/footer): urls now open in a new tab

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -18,6 +18,8 @@
         <li>
           <a
             href="https://github.com/Ednyan/ibu-dashboard/graphs/contributors"
+            target="_blank"
+            rel="noopener noreferrer"
             class="text-white/50 hover:text-white"
           >
             Credits
@@ -27,6 +29,8 @@
         <li>
           <a
             href="https://github.com/Ednyan/ibu-dashboard/"
+            target="_blank"
+            rel="noopener noreferrer"
             class="text-white/50 hover:text-white"
           >
             Source Code
@@ -41,6 +45,8 @@
         <li>
           <a
             href="https://github.com/Ednyan/ibu-dashboard/blob/main/CHANGELOG.md"
+            target="_blank"
+            rel="noopener noreferrer"
             class="text-white/50 hover:text-white"
           >
             Changelog
