chore(ui/index): make style more consistant

--- a/templates/index.html
+++ b/templates/index.html
@@ -34,9 +34,9 @@ extra_nav_buttons_mobile %}
       href="{{ url_for('visualization') }}"
       class="px-12 py-6 rounded-3xl text-4xl text-white whitespace-nowrap font-semibold bg-linear-to-br from-[#e06150] to-[#ff7a6b] transition hover:scale-[1.03] active:scale-[0.97] inline-flex flex-col"
     >
-      <span class="text-4xl font-semibold"> Team Overview </span>
+      <span class="text-4xl font-semibold"> Team Info </span>
       <span class="text-sm text-white/80 mt-1">
-        See overall team performace overtime
+        See overall team performace
       </span>
     </a>
 
@@ -46,7 +46,7 @@ extra_nav_buttons_mobile %}
     >
       <span class="text-4xl font-semibold"> Trends </span>
       <span class="text-sm text-white/80 mt-1">
-        See team(s) & user(s) performace overtime
+        See teams & users performace overtime
       </span>
     </a>
 
@@ -54,7 +54,7 @@ extra_nav_buttons_mobile %}
       href="{{ url_for('member_info') }}"
       class="px-12 py-6 rounded-3xl text-4xl text-white whitespace-nowrap font-semibold bg-linear-to-br from-[#667eea] to-[#764ba2] transition hover:scale-[1.03] active:scale-[0.97] inline-flex flex-col"
     >
-      <span class="text-4xl font-semibold"> Member Tracking </span>
+      <span class="text-4xl font-semibold"> Members </span>
       <span class="text-sm text-white/80 mt-1">
         See members contribution to the team
       </span>
@@ -67,7 +67,7 @@ extra_nav_buttons_mobile %}
   class="fixed right-6 top-1/2 z-40 -translate-y-1/2 select-none hidden md:block"
 >
   <div
-    class="w-[320px] max-w-[calc(100vw-2rem)] rounded-2xl border border-white/10 bg-black/5 backdrop-brightness-75 backdrop-blur p-4 text-sm text-white shadow-xl shadow-black/50"
+    class="w-[320px] max-w-[calc(100vw-2rem)] rounded-2xl border border-white/10 bg-neutral-900 p-4 text-sm text-white shadow-xl shadow-black/50"
   >
     <div class="mb-4 border-b border-white/10 pb-2">
       <h3 class="text-sm font-semibold tracking-wide text-white/90">
@@ -127,7 +127,7 @@ extra_nav_buttons_mobile %}
     <!-- Top performers -->
     <div>
       <div class="mb-2 flex items-center justify-between text-white/80">
-        <span class="text-xs font-semibold tracking-wide uppercase">
+        <span class="text-xs font-semibold tracking-wide">
           Top Performers
         </span>
       </div>
