--- a/templates/error.html
+++ b/templates/error.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %} {% block title %}{{ code }} – {{ name }}{% endblock %}
+{% extends "base.html" %} {% block title %}{{ code }} - {{ name }}{% endblock %}
 {% block content %}
 <div class="flex min-h-[60vh] items-center justify-center px-4">
   <div
