chore(ui): move notification-admin to admin

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -38,7 +38,10 @@
         </li>
 
         <li>
-          <a href="/notification-admin" class="text-white/50 hover:text-white">
+          <a
+            href="{{ url_for('notification_admin') }}"
+            class="text-white/50 hover:text-white"
+          >
             Admin Panel
           </a>
         </li>
